--- a/manifest.json
+++ b/manifest.json
@@ -54,9 +54,7 @@
 		"Gallery": {
 			"description": "访问系统相册"
 		},
-		"Geolocation": {
-			"description": "访问位置信息"
-		},
+
 		"Invocation": {
 			"description": "使用Native.js能力"
 		},
@@ -86,9 +84,7 @@
 		"Barcode": {
 			"description": "管理二维码扫描插件"
 		},
-		"Maps": {
-			"description": "管理地图插件"
-		},
+
 		"Speech": {
 			"description": "管理语音识别插件"
 		},
@@ -103,7 +99,9 @@
 		},
 		"NativeObj": {
 			"description": "原生对象"
-		}
+		},
+		"Maps": {},
+		"Geolocation": {}
 	},
 	"plus": {
 		"splashscreen": {
@@ -120,7 +118,7 @@
 						"appkey_ios": "IcaplkaRPR5jd0ACkhUNNoGT2mEf2htR",
 						"appkey_android": "rLlTvUUmsqmqI7CX6eQIeU3nh2GlvNPa",
 						"appkey": "",
-						"description": "百度地图"
+						"description": ""
 					}
 				}
 			},
@@ -138,30 +136,30 @@
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
 				"permissions": [
+					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
+					"<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
 					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>",
+					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
 					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
 					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
+					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
 					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
 					"<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
-					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
-					"<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
-					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
-					"<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>",
-					"<uses-permission android:name=\"android.permission.CAMERA\"/>",
-					"<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
-					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
-					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
-					"<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>",
-					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
-					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
 					"<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
 					"<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
+					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
 					"<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
+					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
 					"<uses-feature android:name=\"android.hardware.camera\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
 					"<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
-					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>",
+					"<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>",
+					"<uses-permission android:name=\"android.permission.CAMERA\"/>"
 				]
 			},
 			"orientation": [
@@ -211,16 +209,7 @@
 					"iphone": {
 						"default": ""
 					},
-					"ipad": {
-						 /*iPad竖屏启动图片，分辨率：768x1004*/
-						/*iPad高分屏竖屏图片，分辨率：1536x2008*/
-						 /*iPad横屏启动图片，分辨率：1024x748*/
-						 /*iPad高分屏横屏启动图片，分辨率：2048x1496*/
-						 /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
-						/*iPad iOS7高分屏竖屏图片，分辨率：1536x2048*/
-						 /*iPad iOS7横屏启动图片，分辨率：1024x768*/
-						
-					}
+					"ipad": {}
 				},
 				"android": {
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
@@ -547,7 +536,8 @@
 					"view/mine/myCard.html",
 					"view/mine/changelanguage.html",
 					"login.html",
-					"view/mine/searchfriend.html"
+					"view/mine/searchfriend.html",
+					"view/mine/myDynamics.html"
 				],
 				"priority": 0
 			},
@@ -1472,7 +1462,8 @@
 					"images/Assets.xcassets/heart.imageset/heart@2x.png"
 				],
 				"refer": [
-					"view/mine/dynamics_detail.html"
+					"view/mine/dynamics_detail.html",
+					"view/mine/new_comment.html"
 				],
 				"priority": 0
 			},
@@ -1668,6 +1659,17 @@
 					"css/imageViewer.css"
 				],
 				"refer": [],
+				"priority": 0
+			},
+			"view/mine/myDynamics.html": {
+				"resources": [
+					"css/mui.min.css",
+					"js/myDynamics.js",
+					"images/lunnbo2.jpg"
+				],
+				"refer": [
+					"view/mine/dynamics_detail.html"
+				],
 				"priority": 0
 			}
 		},
